# bwa-postalt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt  conf.py
include/postalt/: altfile.h  postalt.h  threadpool.h  timer.h  utility.h  version.h  workflow.h
script/: build.sh  doc.sh  test.sh
source/: altfile.cpp  postalt.cpp  utility.cpp  workflow.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: altfile.cpp  main.cpp  postalt.cpp  workflow.cpp
